--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
+# Banco de Dados
 spring.datasource.url=jdbc:mysql://localhost:3306/camisasdb
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-jwt.secret=secreta123
-jwt.expiration=86400000
+# Server
 server.port=8080
