--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
-
+# Configurações existentes
 spring.datasource.url=jdbc:mysql://localhost:3306/camisasdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
 server.port=8080
+
+# Configurações para upload de arquivos
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+# Diretório de upload das imagens
+app.upload.dir=uploads/produtos
+app.upload.max-file-size=5242880
