--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://mysql-camisasdetime-ricardo-a235.i.aivencloud.com:15976/defaultdb
 spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_7QTB13jG_WnyKFvwG4k
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
